Cleanup main file even more

--- a/hexui_lib/pom.xml
+++ b/hexui_lib/pom.xml
@@ -3,7 +3,7 @@
     <groupId>hexui_lib</groupId>
     <artifactId>HexUILib</artifactId>
     <!--<version>1.2.0</version>-->
-    <version>0.1.0</version>
+    <version>0.1.0.test</version>
     <name>HexUILib</name>
 
     <properties>
